	modified:   ZGame/AI/ZChess/Src/Chess/SearchEngine.h
	modified:   ZGame/AI/ZChess/Src/Chess/TranspositionTable.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/TranspositionTable.h
	modified:   ZGame/AI/ZChess/Src/Chess/chess.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/chess.h
	modified:   ZGame/AI/ZChess/Src/Chess/chessDlg.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/chessDlg.h
	modified:   ZGame/AI/ZChess/Src/Chess/define.h
	modified:   ZGame/AI/ZChess/Src/Chess/negascout.h
	modified:   ZGame/AI/ZChess/Src/Chess/resource.h
	modified:   ZGame/AI/ZChess/Src/GoBang/Define.h
	modified:   ZGame/AI/ZChess/Src/GoBang/Eveluation.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/Eveluation.h
	modified:   ZGame/AI/ZChess/Src/GoBang/HistoryHeuristic.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/HistoryHeuristic.h
	modified:   ZGame/AI/ZChess/Src/GoBang/MoveGenerator.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/MoveGenerator.h
	modified:   ZGame/AI/ZChess/Src/GoBang/NegaScout_TT_HH.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/NegaScout_TT_HH.h
	modified:   ZGame/AI/ZChess/Src/GoBang/NewGameDlg.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/NewGameDlg.h
	modified:   ZGame/AI/ZChess/Src/GoBang/Renju.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/Renju.h
	modified:   ZGame/AI/ZChess/Src/GoBang/RenjuDlg.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/RenjuDlg.h
	modified:   ZGame/AI/ZChess/Src/GoBang/SearchEngine.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/SearchEngine.h
	modified:   ZGame/AI/ZChess/Src/GoBang/TranspositionTable.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/TranspositionTable.h
	modified:   ZGame/AI/ZChess/Src/GoBang/resource.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/07/01.16_41_07.97.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
