@@ -85,9 +85,10 @@
       L396, 24:R#.18   @3ds
       L405, 25:R#.19   @znote BookList
       L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-07-01 16:09:10 L.183'28250 T2692187503.K ~424 +----+----+----+----+----+
-     TimeCnt : //z 2015-06-24 12:53:49 L.190'39971 T878696314 .K ~16  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~20  +----+----+----+----+----+
+     Zndex_E : //z 2015-07-01 18:11:36 L.183'20904 T981054642 .K ~444 +----+----+----+----+----+
+     TimeCnt : //z 2015-07-01 18:10:36 L.183'20964 T981018705 .K ~17  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-07-01 18:10:34 L.183'20966 T981018703 .K ~21  +----+----+----+----+----+
+     #21  R+ : //z 2015-07-01 18:10:34 L.183'20966 T981018703 .K ~21    V+.448  L+.490  
      #20  R+ : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~20    V+.407  L+.439  
      #19  R+ : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~19    V+.363  L+.380  
      #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~18    V+.354  L+.368  
@@ -110,7 +111,9 @@
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-07-01 16:09:10 L.183'28250 T2692187503.K ~444   R+.19   L+.472  --+----+
+     Version : //z 2015-07-01 18:11:36 L.183'20904 T981054642 .K ~465   R+.21   L+.491  --+----+
+     #24  V+ : //z 2015-07-01 18:10:55 L.183'20945 T981018770 .K ~456   R+.21   L+.494  
+     #23  R+ : //z 2015-07-01 18:10:34 L.183'20966 T981018703 .K ~448   R+.21   L+.491  V+.448  
      #23  V+ : //z 2015-06-24 14:58:36 L.190'32484 T3461811901.K ~437   R+.19   L+.466  
      #22  V+ : //z 2015-06-24 13:11:19 L.190'38921 T2165348626.K ~418   R+.19   L+.445  
      #21  R+ : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~407   R+.20   L+.440  V+.407  
@@ -157,7 +160,7 @@
      K  Mers : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K Kersi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      KVersio : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     K Versi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
+     K Versi : //z 2015-07-01 18:10:59 L.183'20941 T981018774 .K ~457   R+.21   L+.495  
      K  Vers : //z 2015-06-04 16:19:53 L.210'27607 T1565149273.K ~347   R+.17   L+.361  
      K   Ver : //z 2015-05-21 18:07:13 L.224'21167 T2791718322.K ~263   R+.14   L+.280  
      K    Ve : //z 2015-05-08 17:52:01 L.237'22079 T1800686291.K ~149   R+.10   L+.198  
@@ -483,3 +486,17 @@ PC游戏编程（人机博弈）
 作者在教学中不断指出，OpenGL是图形编程很基础的东西，在其基础上有很多开源框架，你如果直接学习这些框架，而不具备图像编程的基础知识，会有一种空中楼阁的感觉，他建议在完成本书后可以学习一两个开源框架，通过成熟的框架来帮助你具备工业级开发的能力。在最后一章也较详细的讲述了，完成本书的学习后如果想进一步在图像编程发展，可以怎么做。
 我读的时候本书还没翻译，读原版虽然被图形学的词汇绕的有点晕，但还是坚持下来了觉得收获很大，让我一个没接触过3D图像编程的Android码农真正的入门了。现在翻译版上架，写一些自己的读后感，作为对原作者诚意作品的感谢。
 #endregion //z 2015-06-24 13:07:42 L.190'39138 BG57IV3@XCL T2164378419.K.F4146951713-+----+----+
+
+#region 07-01 18:10 R#.21   @Game tmp
+//z 2015-07-01 18:10:36 L.183'20964 T981018705 .K[T17,L490,R21,V450]
+01. 
+http://pan.baidu.com/wap/link?shareid=2612482638&uk=3206192511&third=0&page=1&dir=/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%94%B5%E5%AD%90%E4%B9%A6&
+
+http://pan.baidu.com/wap/share/home?uk=1479591397&third=0
+
+http://pan.baidu.com/wap/share/home?uk=2703695769&third=0
+
+http://pan.baidu.com/wap/link?uk=3875563743&shareid=3203641348&third=0
+
+http://pan.baidu.com/wap/link?shareid=1955113446&uk=1142351078&third=0&dir=%2F%E3%80%90%E7%A6%8F%E5%88%A9%E3%80%91%E6%B8%B8%E6%88%8F%E7%BC%96%E7%A8%8B%E5%AD%A6%E4%B9%A0%E8%B5%84%E6%96%99%20by%E6%B5%85%E5%A2%A8_%E6%AF%9B%E6%98%9F%E4%BA%91&page=1&
+#endregion //z 2015-07-01 18:10:34 L.183'20966 BG57IV3@XCL T981018703 .K.F4146951713-+----+----+
